fixed paddings to overlay text/ z-index/ font-size properties to callback-form agreemant text

--- a/css/main.css
+++ b/css/main.css
@@ -435,7 +435,7 @@ body.modal-open {
   right: 0px;
   border: none;
   background-color: transparent;
-  z-index: 999;
+  z-index: 10;
   transition: color 250ms var(--timing-function);
   color: var(--primary-text-color);
 }
@@ -1420,6 +1420,7 @@ body.modal-open {
 
 .backdrop {
   position: fixed;
+  z-index: 100;
   transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
   top: 0;
   left: 0;
@@ -1564,9 +1565,17 @@ body.modal-open {
 }
 
 .callback-form__agreement-text {
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--callbackform-agreemant-text);
+}
+
+@media screen and (min-width: 1200px) {
+  .callback-form__agreement-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .callback-form__agreement-link {
@@ -1747,7 +1756,7 @@ body.modal-open {
   transform: translateY(100%);
   top: 0;
   left: 0;
-  padding: 63px 24px;
+  padding: 77px 24px;
   width: 100%;
   height: 100%;
   font-size: 18px;
@@ -1755,6 +1764,12 @@ body.modal-open {
   letter-spacing: 0.03em;
   color: var(--overlay-examples-text-color);
   background-color: var(--ovarlay-examples-cards-color);
+}
+
+@media screen and (min-width: 768px) {
+  .overlay__text {
+    padding: 63px 24px;
+  }
 }
 
 .examples__picture {
