--- a/sass/components/_callback-form.scss
+++ b/sass/components/_callback-form.scss
@@ -98,11 +98,17 @@
 }
 
 .callback-form__agreement-text {
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.16;
 
     letter-spacing: 0.03em;
 
     color: var(--callbackform-agreemant-text);
+
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.71;
+    }
 }
 
 .callback-form__agreement-link {
