--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -128,7 +128,7 @@
     top: 0;
     left: 0;
 
-    padding: 63px 24px;
+    padding: 77px 24px;
     width: 100%;
     height: 100%;
 
@@ -138,6 +138,10 @@
     
     color: var(--overlay-examples-text-color);
     background-color: var(--ovarlay-examples-cards-color);
+
+    @media screen and (min-width: 768px) {
+     padding: 63px 24px;
+    }
 
 }
 
