--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -29,7 +29,7 @@
 
     background-color: transparent;
 
-    z-index: 999;
+    z-index: 10;
 
     transition: color 250ms var(--timing-function);
 
