--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,5 +1,6 @@
 .backdrop {
     position: fixed;
+    z-index: 100;
 
     transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
 
